<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llTeamA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_name_teamA" />

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_goals" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementGolasTeamA"
                    style="@style/Button"
                    android:background="@drawable/goal_1" />

                <TextView
                    android:id="@+id/txtGoalCounterTeamA"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_faults" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementFaultsTeamA"
                    style="@style/Button"
                    android:background="@drawable/checkered_flag" />

                <TextView
                    android:id="@+id/txtFaultsCounterTeamA"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_yellow_cards" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementYellowCardsTeamA"
                    style="@style/Button"
                    android:background="@drawable/yellow_card" />

                <TextView
                    android:id="@+id/txtYellowCardsCounterTeamA"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_red_cards" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementRedCardsTeamA"
                    style="@style/Button"
                    android:background="@drawable/red_card" />

                <TextView
                    android:id="@+id/txtRedCardsCounterTeamA"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_corner_kicks" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementCornerKicksTeamA"
                    style="@style/Button"
                    android:background="@drawable/corner" />

                <TextView
                    android:id="@+id/txtCornerKicksCounterTeamA"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_penalties" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementPenaltiesTeamA"
                    style="@style/Button"
                    android:background="@drawable/goal" />

                <TextView
                    android:id="@+id/txtPenaltiesCounterTeamA"
                    style="@style/CounterText" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/llTeamB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_name_teamB" />

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_goals" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementGolasTeamB"
                    style="@style/Button"
                    android:background="@drawable/goal_1" />

                <TextView
                    android:id="@+id/txtGoalCounterTeamB"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_faults" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementFaultsTeamB"
                    style="@style/Button"
                    android:background="@drawable/checkered_flag" />

                <TextView
                    android:id="@+id/txtFaultsCounterTeamB"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_yellow_cards" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementYellowCardsTeamB"
                    style="@style/Button"
                    android:background="@drawable/yellow_card" />

                <TextView
                    android:id="@+id/txtYellowCardsCounterTeamB"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_red_cards" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementRedCardsTeamB"
                    style="@style/Button"
                    android:background="@drawable/red_card" />

                <TextView
                    android:id="@+id/txtRedCardsCounterTeamB"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_corner_kicks" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementCornerKicksTeamB"
                    style="@style/Button"
                    android:background="@drawable/corner" />

                <TextView
                    android:id="@+id/txtCornerKicksCounterTeamB"
                    style="@style/CounterText" />

            </LinearLayout>

            <TextView
                style="@style/TextTitle"
                android:text="@string/txt_penalties" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIncrementPenaltiesTeamB"
                    style="@style/Button"
                    android:background="@drawable/goal" />

                <TextView
                    android:id="@+id/txtPenaltiesCounterTeamB"
                    style="@style/CounterText" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnResetCounters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>